--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -7,6 +7,7 @@
 		display: grid;
 		grid-template-columns: 250px 1fr;
 		min-height: calc(100vh - 50px);
+		min-height: -webkit-fill-available;
 	}
 }
 
